fix a tricky bug with random walks non-uniform + cleaning tests + seeded random