@@ -111,12 +111,12 @@ class ProgressJenaIteratorTest {
         PreemptJenaIterator.NB_WALKS = 200000;
 
         var it = backend.search(backend.any(), given, backend.any());
-        ProgressJenaIterator casted = (ProgressJenaIterator) ((LazyIterator) it).iterator;
+        ProgressJenaIterator casted = (ProgressJenaIterator) ((LazyIterator<?,?>)it).iterator;
         assertEquals(69970, casted.cardinality(Integer.MAX_VALUE));
         log.info("Expected 69970, got {}.", casted.cardinality());
 
         it = backend.search(backend.any(), family, backend.any());
-        casted = (ProgressJenaIterator) ((LazyIterator) it).iterator;
+        casted = (ProgressJenaIterator) ((LazyIterator<?,?>)it).iterator;
         log.info("Expected 69970, got {}.", casted.cardinality());
         assertEquals(69970, casted.cardinality(Integer.MAX_VALUE));
     }
@@ -135,38 +135,38 @@ class ProgressJenaIteratorTest {
 
         NodeId price = backend.getId("<http://purl.org/goodrelations/price>");
         var it = backend.search(backend.any(), price, backend.any());
-        ProgressJenaIterator casted = (ProgressJenaIterator) ((LazyIterator) it).iterator;
+        ProgressJenaIterator casted = (ProgressJenaIterator) ((LazyIterator<?,?>) it).iterator;
         assertEquals(240000, casted.cardinality(Integer.MAX_VALUE));
         log.info("Expected 240000, got {}.", casted.cardinality(200000));
 
         NodeId eligible = backend.getId("<http://schema.org/eligibleQuantity>");
         it = backend.search(backend.any(), eligible, backend.any());
-        casted = (ProgressJenaIterator) ((LazyIterator) it).iterator;
+        casted = (ProgressJenaIterator) ((LazyIterator<?,?>) it).iterator;
         assertEquals(90000, casted.cardinality(Integer.MAX_VALUE));
         log.info("Expected 90000, got {}.", casted.cardinality(200000));
 
         NodeId text = backend.getId("<http://schema.org/text>");
         it = backend.search(backend.any(), text, backend.any());
-        casted = (ProgressJenaIterator) ((LazyIterator) it).iterator;
+        casted = (ProgressJenaIterator) ((LazyIterator<?,?>) it).iterator;
         assertEquals(7476, casted.cardinality(Integer.MAX_VALUE));
         log.info("Expected 7476, got {}.", casted.cardinality(200000));
 
         NodeId include = backend.getId("<http://purl.org/goodrelations/includes>");
         it = backend.search(backend.any(), include, backend.any());
-        casted = (ProgressJenaIterator) ((LazyIterator) it).iterator;
+        casted = (ProgressJenaIterator) ((LazyIterator<?,?>) it).iterator;
         assertEquals(90000, casted.cardinality(Integer.MAX_VALUE));
         log.info("Expected 90000, got {}.", casted.cardinality(200000));
 
         NodeId valid = backend.getId("<http://purl.org/goodrelations/validThrough>");
         it = backend.search(backend.any(), valid, backend.any());
-        casted = (ProgressJenaIterator) ((LazyIterator) it).iterator;
+        casted = (ProgressJenaIterator) ((LazyIterator<?,?>) it).iterator;
         assertEquals(36346, casted.cardinality(Integer.MAX_VALUE));
         log.info("Expected 36346, got {}.", casted.cardinality(200000));
 
         NodeId region = backend.getId("<http://schema.org/eligibleRegion>");
         NodeId country21 = backend.getId("<http://db.uwaterloo.ca/~galuc/wsdbm/Country21>");
         it = backend.search(backend.any(), region, country21);
-        casted = (ProgressJenaIterator) ((LazyIterator) it).iterator;
+        casted = (ProgressJenaIterator) ((LazyIterator<?,?>) it).iterator;
         assertEquals(2613, casted.cardinality(Integer.MAX_VALUE));
         log.info("Expected 2613, got {}.", casted.cardinality(200000));
     }
@@ -177,59 +177,65 @@ class ProgressJenaIteratorTest {
 
         NodeId price = backend.getId("<http://purl.org/goodrelations/price>");
         var it = backend.search(backend.any(), price, backend.any());
-        ProgressJenaIterator casted = (ProgressJenaIterator) ((LazyIterator) it).iterator;
+        ProgressJenaIterator casted = (ProgressJenaIterator) ((LazyIterator<?,?>) it).iterator;
         assertEquals(240000, casted.getTreeOfCardinality().sum);
 
         NodeId eligible = backend.getId("<http://schema.org/eligibleQuantity>");
         it = backend.search(backend.any(), eligible,backend.any());
-        casted =(ProgressJenaIterator)((LazyIterator)it).iterator;
+        casted =(ProgressJenaIterator)((LazyIterator<?,?>)it).iterator;
         assertEquals(90000, casted.getTreeOfCardinality().sum);
 
         NodeId text = backend.getId("<http://schema.org/text>");
         it = backend.search(backend.any(),text,backend.any());
-        casted =(ProgressJenaIterator)((LazyIterator)it).iterator;
+        casted =(ProgressJenaIterator)((LazyIterator<?,?>)it).iterator;
         assertEquals(7476, casted.getTreeOfCardinality().sum);
 
         NodeId include = backend.getId("<http://purl.org/goodrelations/includes>");
         it = backend.search(backend.any(),include,backend.any());
-        casted =(ProgressJenaIterator)((LazyIterator)it).iterator;
+        casted =(ProgressJenaIterator)((LazyIterator<?,?>)it).iterator;
         assertEquals(90000, casted.getTreeOfCardinality().sum);
 
         NodeId valid = backend.getId("<http://purl.org/goodrelations/validThrough>");
         it = backend.search(backend.any(),valid,backend.any());
-        casted =(ProgressJenaIterator)((LazyIterator)it).iterator;
+        casted =(ProgressJenaIterator)((LazyIterator<?,?>)it).iterator;
         assertEquals(36346, casted.getTreeOfCardinality().sum);
 
         NodeId region = backend.getId("<http://schema.org/eligibleRegion>");
         NodeId country21 = backend.getId("<http://db.uwaterloo.ca/~galuc/wsdbm/Country21>");
         it = backend.search(backend.any(),region,country21);
-        casted =(ProgressJenaIterator)((LazyIterator)it).iterator;
+        casted =(ProgressJenaIterator)((LazyIterator<?,?>)it).iterator;
         assertEquals(2613, casted.getTreeOfCardinality().sum);
     }
+
+    /* ********************************************************************** */
 
     @Disabled
     @Test
     public void getting_the_distribution_of_watdiv_spo_in_balanced_tree_index() {
+        // Conclusion of this: the distribution is not uniform in the balanced tree.
+        // Some elements have better chance to appear in the sample than others.
+        // On the tested dataset it was up to 4x increased chances between the
+        // min and the max.
         ProgressJenaIterator.NB_WALKS = 1000;
-
         JenaBackend backend = new JenaBackend("../target/watdiv10M");
-        ProgressJenaIterator it = (ProgressJenaIterator) ((LazyIterator) backend.search(backend.any(), backend.any(), backend.any())).iterator;
+        ProgressJenaIterator it = (ProgressJenaIterator) ((LazyIterator<?,?>)backend.search(backend.any(), backend.any(), backend.any())).iterator;
         HashMap<Record, ImmutableTriple<Double, Double, Double>> recordToProba = new HashMap<>();
+
         log.debug("Start random sampling…");
         for (int i = 0; i < 100_000; ++i) {
             var rWp = it.getRandomWithProbability();
             Tuple<NodeId> ids = backend.getId(rWp.getLeft());
-            LazyIterator s = (LazyIterator) backend.search(ids.get(0), backend.any(), backend.any());
+            LazyIterator<?,?> s = (LazyIterator<?,?>)backend.search(ids.get(0), backend.any(), backend.any());
             ProgressJenaIterator sR = (ProgressJenaIterator) s.iterator;
-            LazyIterator o = (LazyIterator) backend.search(backend.any(), backend.any(), ids.get(2));
+            LazyIterator<?,?> o = (LazyIterator<?,?>)backend.search(backend.any(), backend.any(), ids.get(2));
             ProgressJenaIterator oR = (ProgressJenaIterator) o.iterator;
             recordToProba.put(rWp.getLeft(), new ImmutableTriple<>(rWp.getRight(), oR.cardinality(), sR.cardinality()));
         }
 
-        var sortedProbas = recordToProba.values().stream().sorted(Comparator.comparing(a -> a.left)).collect(Collectors.toList());
+        var sortedProbas = recordToProba.values().stream().sorted(Comparator.comparing(a -> a.left)).toList();
 
+        log.debug("Start accept/reject to uniformize…");
         List<ImmutableTriple<Double, Double, Double>> accepted = new ArrayList<>();
-
         for (ImmutableTriple<Double, Double, Double> triple : sortedProbas) {
             double randomNumber= new Random().nextDouble();
             if (randomNumber <= (1./it.cardinality())/triple.getLeft()) { // p = getLeft * 1/|N|/getLeft = 1/|N|
@@ -237,8 +243,8 @@ class ProgressJenaIteratorTest {
             }
         }
 
-        System.out.println("Size of unique triples = " + sortedProbas.size());
-        System.out.println("Size of accepted = " + accepted.size());
+        log.info("Size of unique triples = {}", sortedProbas.size());
+        log.info("Size of accepted = {}", accepted.size());
         // normalized.forEach(p -> System.out.println(String.format("%s %s %s", p.getLeft(), p.getMiddle(), p.getRight())));
 
         double sum = 0.;
@@ -246,41 +252,16 @@ class ProgressJenaIteratorTest {
             sum += 1. / triple.getRight(); // middle : object ; right : subject
         }
         double estimate = it.cardinality() / accepted.size() * sum;
-        System.out.println(estimate);
+        log.info("Estimate = {}", estimate);
     }
-
 
     @Disabled
     @Test
-    public void testing_for_count_distinct() {
+    public void count_distinct_of_subject_on_watdiv_with_uniformity() {
         ProgressJenaIterator.NB_WALKS = 1000;
+        final double DISTINCT_SUBJECT = 521_585.;
         JenaBackend backend = new JenaBackend("../target/watdiv10M");
-        LazyIterator spo = (LazyIterator) backend.search(backend.any(), backend.any(), backend.any());
-        ProgressJenaIterator spoR = (ProgressJenaIterator) spo.iterator;
-        double sampleSize = 10000.;
-
-        for (int j = 0; j < 5; ++j) {
-            double sum = 0.;
-            for (int i = 0; i < sampleSize; ++i) {
-                var rWp = spoR.getRandomWithProbability();
-                Tuple<NodeId> ids = backend.getId(rWp.getLeft());
-                LazyIterator o = (LazyIterator) backend.search(backend.any(), backend.any(), ids.get(2));
-                //LazyIterator o = (LazyIterator) backend.search(ids.get(0), backend.any(), backend.any());
-                ProgressJenaIterator oR = (ProgressJenaIterator) o.iterator;
-                sum += 1. / oR.cardinality();
-            }
-            double estimate = spoR.cardinality() / sampleSize * sum;
-            System.out.println(estimate);
-        }
-    }
-
-
-    @Disabled
-    @Test
-    public void try_to_get_a_uniform_sample_out_of_spo() {
-        ProgressJenaIterator.NB_WALKS = 1000;
-        JenaBackend backend = new JenaBackend("../target/watdiv10M");
-        LazyIterator spo = (LazyIterator) backend.search(backend.any(), backend.any(), backend.any());
+        LazyIterator<?,?> spo = (LazyIterator<?,?>)backend.search(backend.any(), backend.any(), backend.any());
         ProgressJenaIterator spoR = (ProgressJenaIterator) spo.iterator;
 
         int sampleSize = 10_000;
@@ -291,145 +272,55 @@ class ProgressJenaIteratorTest {
                 var rWp = spoR.getUniformRandom();
                 Tuple<NodeId> ids = backend.getId(rWp);
                 // LazyIterator o = (LazyIterator) backend.search(backend.any(), backend.any(), ids.get(2));
-                LazyIterator o = (LazyIterator) backend.search(ids.get(0), backend.any(), backend.any());
+                LazyIterator<?,?> o = (LazyIterator<?,?>) backend.search(ids.get(0), backend.any(), backend.any());
                 ProgressJenaIterator oR = (ProgressJenaIterator) o.iterator;
-                sum += 1. / oR.cardinality();
+                sum += 1. / oR.cardinality(); // since uniform, the formula is simpler
             }
             double estimate = spoR.cardinality() / sampleSize * sum;
-            System.out.println(estimate);
+            log.info("{}th estimate = {}", j, estimate);
             results.add(estimate);
         }
 
-        Double average = results.stream().mapToDouble(v->v).average().getAsDouble();
-        System.out.println("Average = " + average);
-        System.out.println("Error = " + Math.abs(average-521_585)/521_585);
+        double average = results.stream().mapToDouble(v->v).average().orElse(0.);
+        log.info("Average estimate = {}", average);
+        log.info("Error = {}%", Math.abs(average-DISTINCT_SUBJECT)/DISTINCT_SUBJECT*100);
         //System.out.println("Error = " + Math.abs(average-1_005_832)/1_005_832);
 
     }
 
     @Disabled
     @Test
-    public void try_resampling_using_counts() {
+    public void count_distinct_subject_of_spo_on_watdiv_without_uniformity() {
         ProgressJenaIterator.NB_WALKS = 1000;
-
+        final double DISTINCT_SUBJECT = 521585.;
         JenaBackend backend = new JenaBackend("../target/watdiv10M");
-        ProgressJenaIterator it = (ProgressJenaIterator) ((LazyIterator) backend.search(backend.any(), backend.any(), backend.any())).iterator;
-        // Map<Record, ImmutableTriple<Double, Double, Double>> recordToProba = new HashMap<>();
-        Map<NodeId, Double> object2card = new HashMap<>();
-        Map<NodeId, Double> subject2card = new HashMap<>();
-        Map<NodeId, Double> subject2proba = new HashMap<>();
+
+        ProgressJenaIterator it = (ProgressJenaIterator) ((LazyIterator<?,?>) backend.search(backend.any(), backend.any(), backend.any())).iterator;
+
         List<ImmutablePair<Double, Double>> sampleWithProbaAndCard = new ArrayList<>();
-        log.debug("Start random sampling…");
-        Double SAMPLESIZE = 100_000.;
-        for (int i = 0; i < SAMPLESIZE; ++i) {
-            // var rWp = new ImmutablePair<>(it.getUniformRandom(), 1./ it.getTreeOfCardinality().sum);
+
+        log.debug("Start sampling at random…");
+        final double SAMPLE_SIZE = 100_000.;
+        for (int i = 0; i < SAMPLE_SIZE; ++i) {
             var rWp = it.getRandomWithProbability();
-            // Tuple<NodeId> ids = backend.getId(rWp.getLeft());
             Tuple<NodeId> ids = backend.getId(rWp.getLeft());
-            LazyIterator s = (LazyIterator) backend.search(ids.get(0), backend.any(), backend.any());
-            ProgressJenaIterator sR = (ProgressJenaIterator) s.iterator;
-            // LazyIterator o = (LazyIterator) backend.search(backend.any(), backend.any(), ids.get(2));
-            // ProgressJenaIterator oR = (ProgressJenaIterator) o.iterator;
-            // recordToProba.put(rWp.getLeft(), new ImmutableTriple<>(rWp.getRight(), oR.cardinality(), sR.cardinality()));
-            // subject2card.put(ids.get(0), sR.cardinality());
-            // subject2proba.put(ids.get(0), rWp.getRight());
-            // object2card.put(ids.get(2), oR.cardinality());
-            sampleWithProbaAndCard.add(new ImmutablePair<>(rWp.getRight(), (double) sR.count()));
+            LazyIterator<?,?> s = (LazyIterator<?,?>) backend.search(ids.get(0), backend.any(), backend.any());
+            ProgressJenaIterator sR = (ProgressJenaIterator) s.iterator; // to get Fi
+            sampleWithProbaAndCard.add(new ImmutablePair<>(rWp.getRight(), sR.count()));
         }
 
-        double sumOfCards = subject2card.values().stream().mapToDouble(v->v).sum();
-        List<Double> subjectCards = subject2card.values().stream().toList();
-        log.debug("Resampling…");
-        var rng = new Random();
-        List<Double> resample = new ArrayList<>();
-        /*for (int j = 0; j < 1_000_000; ++j) {
-            int random = rng.nextInt((int) Math.ceil(sumOfCards));
-            double currentSum = 0.;
-            int i = 0;
-            while (currentSum <= random && i < subjectCards.size()) {
-                currentSum += subjectCards.get(i);
-                ++i;
-            }
-            i = i-1;
-            // System.out.println(i);
-            double toAdd = subjectCards.get(i);
-            resample.add(toAdd);
-        }*/
-
-        Double sumOfProbas = 0.;
-        /*
-        for (Double sampled_card: resample) {
-            sumOfProbas += 1. / sampled_card;
-        }
-
-        double estimate = it.cardinality() / resample.size() * sumOfProbas;
-        System.out.println("estimate = " + estimate);
-        */
-
-        // Another strategy
-        /* resample = new ArrayList<>();
-        for (int j = 0; j < 100_000_00; ++j) {
-            int random = rng.nextInt((int) Math.ceil(subjectCards.size()));
-            resample.add(subjectCards.get(random));
-        }
-
-        sumOfProbas = 0.;
-        for (Double sampled_card: resample) {
-            sumOfProbas += 1./sampled_card;
-
-        }
-        double estimate = it.cardinality() / resample.size() * sumOfProbas;
-        System.out.println("estimate = " + estimate);
-
-           */
-
-        // Another strategy
-        Double maxProba = sampleWithProbaAndCard.stream().mapToDouble(ImmutablePair::getLeft).max().getAsDouble();
-        List<ImmutablePair<Double,Double>> subjectProbas = sampleWithProbaAndCard.stream().map(e->
-                new ImmutablePair<>(1./e.getLeft() * maxProba, e.getRight()))
-                .collect(Collectors.toList());
-        sumOfCards = subjectProbas.stream().mapToDouble(ImmutablePair::getLeft).sum();
-
-        /*log.debug("Resampling…");
-        rng = new Random();
-        resample = new ArrayList<>();
-        for (int j = 0; j < 2*SAMPLESIZE; ++j) {
-            // System.out.println(j);
-            double random = rng.nextDouble(sumOfCards);
-            // System.out.println("random " + random);
-            double currentSum = 0.;
-            int i = 0;
-            while (currentSum <= random && i < subjectProbas.size()) {
-                currentSum += subjectProbas.get(i).getLeft();
-                ++i;
-            }
-            i = i-1;
-            // System.out.println(i);
-            double toAdd = subjectProbas.get(i).getRight();
-            resample.add(toAdd);
-        }
-
-        sumOfProbas = 0.;
-        for (Double sampled_card: resample) {
-            sumOfProbas += 1./sampled_card;
-        }
-        double estimate = it.count() / resample.size() * sumOfProbas;
-        System.out.println("estimate = " + estimate);
-        double relativeError = Math.abs(521585. - estimate)/521585.;
-        System.out.println("relative error = " + relativeError);*/
-
-
-        ////
-
-        sumOfProbas = 0.;
-        Double sumOfRevisedSample = 0.;
+        log.debug("Summing all this…"); // (could be done in the sampling directly)
+        double sumOfProbas = 0.;
+        double sumOfRevisedSample = 0.;
         for (ImmutablePair<Double, Double> result : sampleWithProbaAndCard) {
             sumOfProbas += (1./result.getLeft())/result.getRight();
             sumOfRevisedSample += 1./result.getLeft();
         }
 
         double estimate = (it.count() / sumOfRevisedSample) * sumOfProbas;
-        double relativeError = Math.abs(521585. - estimate)/521585.;
+        double relativeError = Math.abs(DISTINCT_SUBJECT - estimate)/ DISTINCT_SUBJECT;
+        log.info("Count distinct = {}", estimate);
+        log.info("Relative error = {}%", relativeError*100);
     }
 
 
@@ -438,57 +329,58 @@ class ProgressJenaIteratorTest {
     public void check_uniformity_of_triple_pattern() {
         ProgressJenaIterator.NB_WALKS = 1000;
 
-        int DISTINCT = 15000;
+        final int DISTINCT = 15_000;
         ArtificallySkewedGraph graph = new ArtificallySkewedGraph(DISTINCT, 50);
         JenaBackend backend = new JenaBackend(graph.getDataset());
-        int SAMPLESIZE = 5000000;
+        final int SAMPLE_SIZE = 5_000_000;
         NodeId is_a = backend.getId("<http://is_a>", SPOC.PREDICATE);
         NodeId prof = backend.getId("<http://Prof>", SPOC.OBJECT);
-        NodeId teaches = backend.getId("<http://teaches>", SPOC.PREDICATE);
-        NodeId belongs_to = backend.getId("<http://belongs_to>", SPOC.PREDICATE);
 
-        ////////////
-
-        ProgressJenaIterator pIsAProf = (ProgressJenaIterator)((LazyIterator) backend.search(backend.any(), is_a, prof)).iterator;
+        ProgressJenaIterator pIsAProf = (ProgressJenaIterator)((LazyIterator<?,?>) backend.search(backend.any(), is_a, prof)).iterator;
         Map<Record, Integer> record2Count = new HashMap<>();
-        for (int i = 0; i < SAMPLESIZE; ++i) {
+        for (int i = 0; i < SAMPLE_SIZE; ++i) {
             Record record = pIsAProf.getUniformRandom();
             if (!record2Count.containsKey(record)){
                 record2Count.put(record, 0);
             }
             record2Count.put(record, record2Count.get(record) + 1);
         }
-        Double mean = record2Count.values().stream().mapToDouble(v->v).average().getAsDouble();
-        Double max  =record2Count.values().stream().mapToDouble(v->v).max().getAsDouble();
-        Double min = record2Count.values().stream().mapToDouble(v->v).min().getAsDouble();
+        double avg = record2Count.values().stream().mapToDouble(v->v).average().orElse(0.);
+        double med = record2Count.values().stream().sorted().toList().get(record2Count.size()/2);
+        double max  =record2Count.values().stream().mapToDouble(v->v).max().getAsDouble();
+        double min = record2Count.values().stream().mapToDouble(v->v).min().getAsDouble();
+        // For uniform sample, (i) the average is close to the median; and (ii) they
+        // must be in the middle of min and max. Plotted, this should look like a gaussian
+        // centered on the average.
+        log.info("Sample occurrences [min (avg, med) max] = [{}, ({}, {}) {}]", min, avg, med, max);
     }
 
     @Disabled
     @Test
-    public void performing_skewed_query() {
-        ProgressJenaIterator.NB_WALKS = 1000;
+    public void count_distinct_in_a_skewed_bgp_query() {
+        // SELECT COUNT(DISTINCT ?group) WHERE {
+        //     ?teacher <http://is_a> <http://Prof> .
+        //     ?teacher <http://teaches> ?student .
+        //     ?student <http://belongs_to> ?group .
+        // }
+        ProgressJenaIterator.NB_WALKS = 1_000;
 
-        int DISTINCT = 10000;
+        int DISTINCT = 10_000;
         ArtificallySkewedGraph graph = new ArtificallySkewedGraph(DISTINCT, 50);
         JenaBackend backend = new JenaBackend(graph.getDataset());
-
-
-        ProgressJenaIterator spo = (ProgressJenaIterator)((LazyIterator) backend.search(backend.any(), backend.any(), backend.any())).iterator;
-        Double cardinality = spo.count();
-        Double estimated = spo.cardinality();
-        Double relativeErr = Math.abs(cardinality- estimated)/cardinality;
-
-        ///////////////////
-
-        int SAMPLESIZE = 20000;
         NodeId is_a = backend.getId("<http://is_a>", SPOC.PREDICATE);
         NodeId prof = backend.getId("<http://Prof>", SPOC.OBJECT);
         NodeId teaches = backend.getId("<http://teaches>", SPOC.PREDICATE);
         NodeId belongs_to = backend.getId("<http://belongs_to>", SPOC.PREDICATE);
 
-        //////////// run the full query
+        ProgressJenaIterator spo = (ProgressJenaIterator)((LazyIterator<?,?>) backend.search(backend.any(), backend.any(), backend.any())).iterator;
+        double cardinality = spo.count();
+        double estimated = spo.cardinality();
+        double relativeErr = Math.abs(cardinality- estimated)/cardinality;
+        log.debug("|Ñ| = {}  (Relative error = {}%)", estimated, relativeErr*100);
 
-        Double total = 0.;
+        log.info("Running the full query to capture exact data…");
+        double total = 0.;
         BackendIterator<NodeId, ?> pIsAProfIt = backend.search(backend.any(), is_a, prof);
         Map<NodeId, Double> group2cardinality = new HashMap<>();
         while (pIsAProfIt.hasNext()) {
@@ -498,134 +390,72 @@ class ProgressJenaIteratorTest {
             while (pTeachesSIt.hasNext()) {
                 pTeachesSIt.next();
                 BackendIterator<NodeId, ?> sBelongsToGIt = backend.search(pTeachesSIt.getId(SPOC.OBJECT), belongs_to, backend.any());
-
-                boolean found = false;
                 while (sBelongsToGIt.hasNext()){
-                    found = true;
                     sBelongsToGIt.next();
-                //    System.out.println(total);
-                    total += 1;
+                    total += 1; // Counting the total to get the exact |N|
+                    // Counting the occurrences of group to get the exact F_i
                     if (!group2cardinality.containsKey(sBelongsToGIt.getId(SPOC.OBJECT))) {
                         group2cardinality.put(sBelongsToGIt.getId(SPOC.OBJECT), 0.);
                     }
                     group2cardinality.put(sBelongsToGIt.getId(SPOC.OBJECT), group2cardinality.get(sBelongsToGIt.getId(SPOC.OBJECT)) + 1);
                 }
-                if (!found) { // failures get recorded in "any"
-                    if (!group2cardinality.containsKey(backend.any())) {
-                        group2cardinality.put(backend.any(), 0.);
-                    }
-                    group2cardinality.put(backend.any(), group2cardinality.get(backend.any()) + 1);
-                }
             }
         }
 
-        //////// Draw a sample
-
-        Double actualSampleSize = 0.;
-        Double sum = 0.;
-        List<ImmutableTriple<Double, String, Double>> resultsProbaAndCard = new ArrayList<>();
-        Map<String, Double> id2count = new HashMap<>();
-        // ?p is_a Prof
-        ProgressJenaIterator pIsAProf = (ProgressJenaIterator)((LazyIterator) backend.search(backend.any(), is_a, prof)).iterator;
-        for (int i = 0; i < SAMPLESIZE; ++i) {
-
-            // Record pRecord = pIsAProf.getUniformRandom();
-            // Double firstTripleProba = 1./pIsAProf.count();
-            var pRP = pIsAProf.getRandomWithProbability();
-            Record pRecord = pRP.getLeft();
-            Double firstTripleProba = pRP.getRight();
+        log.info("Sampling the query…");
+        int SAMPLE_SIZE = 100_000;
+        List<ImmutablePair<Double, Double>> resultsProbaAndCard = new ArrayList<>();
+        // ?teacher <http://is_a> <http://Prof>
+        ProgressJenaIterator pIsAProf = (ProgressJenaIterator)((LazyIterator<?,?>) backend.search(backend.any(), is_a, prof)).iterator;
+        for (int i = 0; i < SAMPLE_SIZE; ++i) {
+            Record pRecord = pIsAProf.getUniformRandom();
+            Double firstTripleProba = 1./pIsAProf.count();
+            // var pRP = pIsAProf.getRandomWithProbability();
+            // Record pRecord = pRP.getLeft();
+            // Double firstTripleProba = pRP.getRight();
             NodeId pId = backend.getId(pRecord).get(SPOC.OBJECT); // TODO id of Record reordered depending on used index
 
-            String id = pRecord.toString();
-
-            // ?p teaches ?s
-            ProgressJenaIterator pTeachesS = (ProgressJenaIterator)((LazyIterator) backend.search(pId, teaches, backend.any())).iterator;
-            // Record sRecord = pTeachesS.getUniformRandom();
-            //Double secondTripleProba = 1./ pTeachesS.count();
-            var sRP = pIsAProf.getRandomWithProbability();
-            Record sRecord = sRP.getLeft();
-            Double secondTripleProba = sRP.getRight();
+            // ?teacher <http://teaches> ?student
+            ProgressJenaIterator pTeachesS = (ProgressJenaIterator)((LazyIterator<?,?>) backend.search(pId, teaches, backend.any())).iterator;
+            Record sRecord = pTeachesS.getUniformRandom();
+            Double secondTripleProba = 1./ pTeachesS.count();
+            // var sRP = pTeachesS.getRandomWithProbability();
+            // Record sRecord = sRP.getLeft();
+            // Double secondTripleProba = sRP.getRight();
 
             NodeId sId = backend.getId(sRecord).get(SPOC.OBJECT);
 
-            id += sRecord;
-
-            ProgressJenaIterator sBelongsToG = (ProgressJenaIterator)((LazyIterator) backend.search(sId, belongs_to, backend.any())).iterator;
+            // ?student <http://belongs_to> ?group
+            ProgressJenaIterator sBelongsToG = (ProgressJenaIterator)((LazyIterator<?,?>) backend.search(sId, belongs_to, backend.any())).iterator;
 
             if (sBelongsToG.count() >= 1) { // TODO ugly but needed for this
-                // Record gRecord = sBelongsToG.getUniformRandom();
-                var gRP = sBelongsToG.getRandomWithProbability();
-                Record gRecord = gRP.getLeft();
+                Record gRecord = sBelongsToG.getUniformRandom();
+                // var gRP = sBelongsToG.getRandomWithProbability();
+                // Record gRecord = gRP.getLeft();
                 NodeId gId = backend.getId(gRecord).get(SPOC.OBJECT);
-                id += gRecord;
 
-                // String pString = backend.getValue(gId);
-                // System.out.println(pString);
-                // here group are unique each teacher, so its easier, but we should count in the global query
-                sum += 1. / group2cardinality.get(gId); //sBelongsToG.count(); // which is always 1 actually
-                actualSampleSize += 1.;
-                resultsProbaAndCard.add(new ImmutableTriple<>(
-                        firstTripleProba * secondTripleProba * 1. / 1.,
-                        id,
+                double thirdTripleProba = 1./1.; // always 1. since there is only one link possible if it exists
+
+                resultsProbaAndCard.add(new ImmutablePair<>(
+                        firstTripleProba * secondTripleProba * thirdTripleProba,
                         group2cardinality.get(gId)
                 ));
-
-                if (!id2count.containsKey(id))
-                    id2count.put(id, 0.);
-
-                id2count.put(id, id2count.get(id) + 1);
             }
         }
 
-        Map<Double, Integer> distributionOfCardinality = new HashMap<>();
-        for (ImmutableTriple<Double, String, Double> p : resultsProbaAndCard) {
-            if (!distributionOfCardinality.containsKey(p.getRight())) {
-                distributionOfCardinality.put(p.getRight(), 0);
-            }
-            distributionOfCardinality.put(p.getRight(), distributionOfCardinality.get(p.getRight())+ 1);
-        }
-        List<Integer> sorted = distributionOfCardinality.values().stream().sorted().toList();
+        log.debug("Actual sample size = {}", resultsProbaAndCard.size()); // because some RWs fail to reach the end
 
-        double estimatedCountDistinct = total / actualSampleSize * sum;
-        double relativeErrCountDistinct = Math.abs(DISTINCT-estimatedCountDistinct)/DISTINCT;
-
-        ///////////////////////////////////////////
-
-        Double maxProba = resultsProbaAndCard.stream().mapToDouble(ImmutableTriple::getLeft).max().getAsDouble();
-        resultsProbaAndCard = resultsProbaAndCard.stream().map(e ->
-                new ImmutableTriple<Double, String, Double>(1./e.getLeft() * maxProba,// * 1./id2count.get(e.getMiddle()),
-                        e.getMiddle(),
-                        e.getRight())
-        ).collect(Collectors.toList());
-
-        log.debug("Resampling…");
-        double sumOfProbas = resultsProbaAndCard.stream().mapToDouble(ImmutableTriple::getLeft).sum();
-        Random rng = new Random();
-        List<Double> resample = new ArrayList<>();
-        for (int j = 0; j < 2*SAMPLESIZE; ++j) { // TODO size of resample?
-            // System.out.println(j);
-            double random = rng.nextDouble(sumOfProbas);
-            // System.out.println("random " + random);
-            double currentSum = 0.;
-            int i = 0;
-            while (currentSum <= random && i < resultsProbaAndCard.size()) {
-                currentSum += resultsProbaAndCard.get(i).getLeft();
-                ++i;
-            }
-            i = i-1;
-            // System.out.println(i);
-            double toAdd = resultsProbaAndCard.get(i).getRight();
-            resample.add(toAdd);
+        double sumOfProbas = 0.;
+        double sumOfCards = 0.;
+        for (ImmutablePair<Double, Double> sample: resultsProbaAndCard) {
+                sumOfCards += 1./sample.getLeft()/ sample.getRight();
+                sumOfProbas += 1./ sample.getLeft();
         }
 
-        sumOfProbas = 0.;
-        for (Double resampledCardinality: resample) {
-                sumOfProbas += 1./resampledCardinality;
-        }
-
-
-        double resampleEstimate = total / resample.size() * sumOfProbas;
-        double resampleRelativeErrCountDistinct = Math.abs(DISTINCT-resampleEstimate)/DISTINCT;
+        double estimate = total / sumOfProbas * sumOfCards;
+        double relativeError = Math.abs(DISTINCT - estimate)/DISTINCT;
+        log.info("Estimate = {}", estimate);
+        log.info("Relative error = {}%", relativeError*100);
     }
 
 
